--- a/package.json
+++ b/package.json
@@ -29,25 +29,22 @@
   ],
   "main": "Gruntfile.js",
   "engines": {
-    "node": "*"
+    "node": ">=6"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt-lib-phantomjs": "^1.0.2",
-    "lodash": "^3.9.0",
-    "mocha": ">=2.5.3"
-  },
-  "peerDependencies": {
-    "grunt": ">=0.4.0"
+    "grunt-lib-phantomjs": "^1.1.0",
+    "lodash": "^4.17.10",
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "grunt": "~0.4",
-    "grunt-contrib-connect": "~0.2",
-    "grunt-contrib-jshint": "~0.3",
-    "mocha": ">=2.5.3"
+    "chai": "^4.1.2",
+    "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "^1.1.0",
+    "mocha": "^5.2.0"
   },
   "keywords": [
     "gruntplugin",
