--- a/package.json
+++ b/package.json
@@ -21,17 +21,13 @@
   "bugs": {
     "url": "https://github.com/disqus/grunt-mocha/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/disqus/grunt-mocha/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "main": "Gruntfile.js",
   "engines": {
     "node": ">=6"
   },
   "scripts": {
+    "lint": "grunt jshint",
     "test": "grunt test"
   },
   "dependencies": {
@@ -43,8 +39,7 @@
     "chai": "^4.1.2",
     "grunt": "^1.0.3",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-jshint": "^1.1.0",
-    "mocha": "^5.2.0"
+    "grunt-contrib-jshint": "^1.1.0"
   },
   "keywords": [
     "gruntplugin",
